# mail-mcp

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  README_CN.md  TEST_PLAN.md  TEST_REPORT.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
authelia/: mail-geb-mcp-client.yml
docs/: authelia-config.md
specs/: api-spec.md  smtp-spec.md
src/imap_mcp/: __init__.py  __main__.py  client.py  server.py
src/imap_mcp/core/: auth.py  connection.py
src/imap_mcp/folders/: __init__.py
src/imap_mcp/operations/: __init__.py  fetch.py  move.py
src/imap_mcp/smtp/: __init__.py  auth.py  connection.py  errors.py
src/imap_mcp/smtp/operations/: __init__.py  send.py
src/imap_mcp/tools/: __init__.py
src/mail_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  transfer.py
src/mail_mcp/core/: __init__.py  auth.py  connection.py  errors.py
src/mail_mcp/db/: __init__.py  store.py  sync.py
src/mail_mcp/folders/: __init__.py  manager.py
src/mail_mcp/operations/: __init__.py  drafts.py  fetch.py  flags.py  move.py  search.py
src/mail_mcp/smtp/: __init__.py  auth.py  connection.py  errors.py
src/mail_mcp/smtp/operations/: __init__.py  message.py  send.py
src/mail_mcp/tools/: __init__.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_drafts.py  test_smtp_auth.py  test_smtp_reconnect.py  test_transfer_download.py
tests/integration/: test_server.py  test_smtp_server.py
tests/unit/: test_core.py  test_folders.py  test_operations.py  test_smtp.py
traefik/: mail-geb-mcp-oauth.yml
